# DeepFake-Detection

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  EfficientB0_OVERSAMPLING.ipynb  README.md  docker-compose.yml  pyproject.toml  settings.py
api/: pyproject.toml
api/app/: inference.py  main.py
