[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
ruff = "^0.12.9"
mypy = "^1.17.1"
pytest = "^8.4.1"

[project]
name = "dfd"
version = "0.1.0"
description = ""
authors = [
    {name = "GAUTAM JHALARIA",email = "jhalariagautam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
